--- a/GRTPath/res/layout/activity_display_routes.xml
+++ b/GRTPath/res/layout/activity_display_routes.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <TextView
+        android:id="@+id/nostops"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_stops"
+        android:visibility="gone" />
+    
     <com.fima.cardsui.views.CardUI
         android:id="@+id/routes_cardview"
         android:layout_width="match_parent"
