--- a/GRTPath/res/layout/activity_main.xml
+++ b/GRTPath/res/layout/activity_main.xml
@@ -1,11 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_green_light"
+    android:fitsSystemWindows="true" >
 
-    <com.fima.cardsui.views.CardUI
-        android:id="@+id/cardsview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+	<FrameLayout
+    	android:layout_width="match_parent"
+    	android:layout_height="match_parent"
+    	android:background="@android:color/white" >
 
-</RelativeLayout>
+    	<com.fima.cardsui.views.CardUI
+        	android:id="@+id/cardsview"
+        	android:layout_width="match_parent"
+        	android:layout_height="match_parent" />
+
+	</FrameLayout>
+	
+</FrameLayout>
