--- a/GRTPath/res/layout/activity_main.xml
+++ b/GRTPath/res/layout/activity_main.xml
@@ -1,19 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_green_light"
-    android:fitsSystemWindows="true" >
-
-	<FrameLayout
-    	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:background="@android:color/white" >
-
-    	<com.fima.cardsui.views.CardUI
+    android:layout_height="match_parent" >
+   			<com.fima.cardsui.views.CardUI
         	android:id="@+id/cardsview"
         	android:layout_width="match_parent"
         	android:layout_height="match_parent" />
-
-	</FrameLayout>
-	
 </FrameLayout>
